# SP-500-DCA

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: tmp-btc-risk-validation.yml
configs/: config.yaml
data/processed/: current_manual_snapshot_2026-05-31.csv
reports/: current_month_report.md
spx_dca/: __init__.py  backtest.py  cli.py  config.py  data_sources.py  indicators.py  regime.py  report.py  utils.py
tests/: test_backtest_outputs.py  test_indicators.py  test_no_lookahead.py  test_regime_rules.py
tmp/btc-risk-validation/: validate.py  validate_summary.py
