[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spx-dca"
version = "0.1.0"
description = "Monthly S&P 500 DCA regime checker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "requests>=2.31",
  "PyYAML>=6.0",
  "pydantic>=2.0",
  "matplotlib>=3.7",
  "openpyxl>=3.1",
  "tabulate>=0.9",
]

[project.scripts]
spx-dca = "spx_dca.cli:main"

[tool.setuptools]
packages = ["spx_dca"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
